# negotiate

./: .gitignore  .npmignore  AGENTS.md  Makefile  README.md  ROOT_README.md  package.json  pyproject.toml  requirements.txt
app/: libraries.py  main.py  storage.py
scripts/: negotiate-npm-cli.mjs  negotiate_cli.py
tests/: test_service.py
ui/: index.html
worker/: package.json  wrangler.toml
worker/src/: index.ts  libraries.ts
